work in progress2

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                 <div>
                     <ul style="display: flex; gap: 10px; align-items: center; list-style-type: none;">
-                        <li><a href="https://web.facebook.com/profile.php?id=61562813812784"></a><img src="./eee.png" width="40px" alt=""></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61562813812784"><img src="./eee.png" width="40px" alt=""></a></li>
                         <li><a href="www.twitter.com"><img src="./twitter.png" alt=""></a></li>
                         <li><a href="www.instargram.com"><img src="./int - Copy.jpeg" alt=""></a></li>
                     </ul>
