--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./ARROW7.jpg" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img src="./ARROW7.jpg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">pricing</a>
+                        <a class="nav-link active" aria-current="page" href="./pricing.html">pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="./aboutUs.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
 
                 </ul>
@@ -43,6 +43,7 @@
             </div>
         </div>
     </nav>
+
     <div class="container">
         <div class="d-flex align-items-center justify-content-between">
             <div class="w-50">
@@ -69,7 +70,7 @@
                 <p class="po">Today, millions of people around the world have successfully connected their accounts to
                     apps they love using our API. We provide developers with the tools they need to create easy and
                     accessible experiences for their users</p>
-                <button class="ee">About us</button>
+                <a href="./aboutUs.html"><button class="ee">About us</button></a>
             </div>
             <div class="col">
                 <!-- irt row -->
@@ -187,7 +188,7 @@
 
     <nav class="navbar navbar-expand-lg navbar- bg-dark p-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./ARROW7.jpg" style="width: 100px;" alt=""></a>
+            <a class="navbar-brand" href="./index.html"><img src="./ARROW7.jpg" style="width: 100px;" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -196,13 +197,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">pricing</a>
+                        <a class="nav-link active" aria-current="page" href="./pricing.html">pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="./aboutUs.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
 
                 </ul>
